cc_library(
    name = "polynomial",
    srcs = [
        "polynomial.cc",
        "polynomial.hpp",
    ],
    copts = [
        "-std=c++11",
    ],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/utils:math",
        "@GMP_lib//:gmp",
        "@NTL_lib//:ntl",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    deps = [
        "polynomial",
    ],
)
